ReplaceActionIT incl. fixes